stderr
JudgeMan.java:155: error: reached end of file while parsing
}
 ^
1 error
